<resources>
    <string name="app_name">News App</string>
    <string name="splash" translatable="false">supervised by Mohamed Nabil</string>
    <string name="pick_your_category_of_interest">Pick your category of interest</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="environment">Environment</string>
    <string name="science">Science</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="ar" translatable="false">العربية</string>
    <string name="en" translatable="false">English</string>
    <string name="view_full_article">View Full Article</string>
    <string name="there_is_no_article_here_right_now_npleace_come_back_later">There is no article here right now\nPleace come back later</string>
    <!-- Magic words -->

    <string name="sportsCategory" translatable="false">sports</string>
    <string name="politicsCategory" translatable="false">politics</string>
    <string name="healthCategory" translatable="false">health</string>
    <string name="businessCategory" translatable="false">business</string>
    <string name="environmentCategory" translatable="false">environment</string>
    <string name="scienceCategory" translatable="false">science</string>
    <!-- Search -->
    <string name="search" translatable="false">Search</string>
</resources>